# metal-msm-gpu-acceleration

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: build-and-test.yml
benches/: msm_benchmark.rs
ios-benchmarking-app/gpu-acceleration/: App.swift
ios-metal-benchmarker/ios-metal-benchmarker/: ContentView.swift  ios_metal_benchmarkerApp.swift
ios-metal-benchmarker/ios-metal-benchmarker.xcodeproj/: project.pbxproj
ios-metal-benchmarker/ios-metal-benchmarker.xcodeproj/project.xcworkspace/xcuserdata/gurak.xcuserdatad/: UserInterfaceState.xcuserstate
ios-metal-benchmarker/ios-metal-benchmarker.xcodeproj/xcuserdata/gurak.xcuserdatad/xcschemes/: xcschememanagement.plist
mopro-msm/: Cargo.toml  build.rs
mopro-msm/benches/: gpu_profiler.rs  msm_benchmark.rs  sort_buckets_indices_benchmark.rs  to_u32_limbs_benchmark.rs
mopro-msm/benchmark_results/: metal_msm_ark_benchmark.txt  metal_msm_h2c_benchmark.txt
mopro-msm/src/: lib.rs
mopro-msm/src/metal/: mod.rs  msm.rs
mopro-msm/src/metal/abstraction/: limbs_conversion.rs  state.rs
mopro-msm/src/metal/msm/: bucket_wise_accumulation.rs  final_accumulation.rs  prepare_buckets_indices.rs  sort_buckets.rs  sum_reduction.rs
mopro-msm/src/metal/shader/: all.metal  msm.h.metal
mopro-msm/src/metal/shader/curves/: ser_point.h.metal
mopro-msm/src/metal/shader/tests/: test_bn254.h.metal
mopro-msm/src/metal/tests/: mod.rs  test_bn254.rs
mopro-msm/src/msm/: mod.rs
mopro-msm/src/msm/metal/: mod.rs  msm.rs
mopro-msm/src/msm/metal/abstraction/: limbs_conversion.rs
mopro-msm/src/msm/metal/msm/: bucket_wise_accumulation.rs  prepare_buckets_indices.rs  sort_buckes.rs  sort_buckets.rs  sum_reduction.rs
mopro-msm/src/msm/metal/shader/: all.metal  msm.h.metal  msm_all_gpu.h.metal  msm_group_based.h.metal
mopro-msm/src/msm/metal/shader/arithmetics/: pair.h.metal  unsigned_int.h.metal
mopro-msm/src/msm/metal/shader/curves/: bn254.h.metal  ec_point.h.metal  ser_point.h.metal
mopro-msm/src/msm/metal/tests/: test_bn254.rs
mopro-msm/src/msm/utils/: preprocess.rs
mopro-msm/src/utils/: preprocess.rs
src/: config.rs  ios_bindings.rs  lib.rs
src/metal/: msm.rs
src/metal/abstraction/: limbs_conversion.rs  state.rs
src/metal/msm/: bucket_wise_accumulation.rs  final_accumulation.rs  prepare_buckets_indices.rs  sort_buckets.rs  sum_reduction.rs
src/metal/tests/: mod.rs  test_bn254.rs
