[package]
name = "mopro-msm"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "gpu_profiler"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "mopro_msm"

[[bin]]
name = "gpu_profiler"
required-features = ["h2c"]

[[bin]]
name = "gen_ios_bindings"
required-features = ["ios-bindings"]

[features]
default = ["macos", "ark"]

ark = ["ark-ec", "ark-bn254", "ark-ff", "ark-std"]
h2c = ["halo2curves"]

macos = []
ios = []
ios-bindings = ["uniffi", "uniffi_bindgen", "ios", "uuid", "camino"]
profiling-release = []

[dependencies]
## Shared dependencies
serde = { version = "1.0", features = ["derive"] }
instant = "0.1"
bincode = "1.3"
rand = "0.8.5"

# Error handling
thiserror = "^1.0.0"

## Arkworks dependencies
ark-ec = { version = "=0.4.1", default-features = false, features = ["parallel"], optional = true }
ark-bn254 = { version = "=0.4.0", optional = true }
ark-ff = { version = "=0.4.1", default-features = false, features = ["parallel"], optional = true }
ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"], optional = true }

## Halo2 dependencies
halo2curves = { version = "0.7.0", default-features = false, features = ["derive_serde", "bits"], optional = true }

# GPU explorations
metal = { version = "=0.29.0" }
objc = { version = "=0.2.7" }
rayon = "1.5.1"
itertools = "0.13.0"
log = "0.4.22"
env_logger = "0.11.6"
lazy_static = "1.5.0"

# iOS bindings dependencies
uniffi = { version = "=0.28.0", optional = true }
uniffi_bindgen = { version = "=0.28.0", optional = true }
camino = { version = "^1.1", optional = true }
uuid = { version = "1.10.0", features = ["v4"], optional = true }
once_cell = "^1.0.0"

[build-dependencies]
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.5.1"
proptest = { version = "1.4.0" }
num-bigint = { version = "=0.4.3", default-features = false }
uniffi = { version = "0.28", features = ["build"] }

[[bench]]
name = "msm_benchmark"
harness = false

[[bench]]
name = "sort_buckets_indices_benchmark"
harness = false

[[bench]]
name = "to_u32_limbs_benchmark"
harness = false