[package]
name = "mopro-msm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["macos", "ark"]

ark = ["ark-ec", "ark-bn254", "ark-ff"]
h2c = ["halo2curves"]

macos = []
ios = []
profiling-release = []

[dependencies]
## Shared dependencies
serde = { version = "1.0", features = ["derive"] }
ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
instant = "0.1"
bincode = "1.3"
rand = "0.8.5"

# Error handling
thiserror = "=1.0.39"
color-eyre = "=0.6.2"

## Arkworks dependencies
ark-ec = { version = "=0.4.1", default-features = false, features = ["parallel"], optional = true }
ark-bn254 = { version = "=0.4.0", optional = true }
ark-ff = { version = "=0.4.1", default-features = false, features = ["parallel"], optional = true }

## Halo2 dependencies
halo2curves = { version = "0.7.0", default-features = false, features = ["derive_serde", "bits"], optional = true }

# GPU explorations
metal = { version = "=0.29.0" }
objc = { version = "=0.2.7" }
rayon = "1.5.1"
itertools = "0.13.0"
log = "0.4.22"
env_logger = "0.11.6"

[build-dependencies]
color-eyre = "0.6"
enumset = "1.0.8"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

[dev-dependencies]
criterion = "0.5.1"
proptest = { version = "1.4.0" }
num-bigint = { version = "=0.4.3", default-features = false }